force-app/main/default/objects/Case/fields/Additional_Information_Required_Set__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Required_Set__c</fullName>
    <description>Date the Case Status was last set to Additional Information Required</description>
    <inlineHelpText>Date the Case Status was last set to Additional Information Required</inlineHelpText>
    <label>Additional Information Required Set</label>
    <type>Date</type>
</CustomField>