force-app/main/default/objects/Case/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <description>Date the QA Manager audited the Case</description>
    <inlineHelpText>Date the QA Manager audited the Case</inlineHelpText>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>