force-app/main/default/objects/Case/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>The client&apos;s bank account number experiencing issues</description>
    <inlineHelpText>The client&apos;s bank account number experiencing issues</inlineHelpText>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>