force-app/main/default/objects/Case/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>The name of the Client&apos;s bank experiencing bank issues</description>
    <inlineHelpText>The name of the Client&apos;s bank experiencing bank issues</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>