force-app/main/default/objects/Case/fields/Case_Assigned_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Date_Time__c</fullName>
    <description>Indicates when a Case was first transferred from a Queue to a User - used to track when an agent started working on a Case.</description>
    <inlineHelpText>Indicates when the Case was first assigned to an Agent/User</inlineHelpText>
    <label>Case Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>