force-app/main/default/objects/Case/fields/Case_Owner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the Portal user who created/submitted the case</description>
    <inlineHelpText>The name of the Portal user who created/submitted the case</inlineHelpText>
    <label>Case Submitted By (Portal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>