force-app/main/default/objects/Case/fields/Case_Secondary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Secondary_Reason__c</fullName>
    <description>When identifying issues for a client, these values are secondary reasons for their reported issue.</description>
    <inlineHelpText>When identifying issues for a client, these values are secondary reasons for their reported issue.</inlineHelpText>
    <label>Case Secondary Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Invoice &amp; Payments</fullName>
            </value>
            <value>
                <fullName>Subscription Review</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Bank Issues</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Entity Management</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Portal Issues</fullName>
            </value>
            <value>
                <fullName>Tax Compliance</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Payment Disputes</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>ClientBooks Invoicing</fullName>
                <isActive>false</isActive>
                <label>ClientBooks Invoicing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>