force-app/main/default/objects/Case/fields/Concession_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Concession_Balance_Remaining__c</fullName>
    <description>The available concession amount remaining</description>
    <inlineHelpText>The available concession amount remaining</inlineHelpText>
    <label>Concession Balance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>