force-app/main/default/objects/Case/fields/Concession_Cost_of_Service_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Concession_Cost_of_Service_Percentage__c</fullName>
    <description>The percentage of the concession products related to the client&apos;s subscription lines</description>
    <label>Concession Cost of Service Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>