force-app/main/default/objects/Case/fields/Concession_Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Concession_Eligible_Amount__c</fullName>
    <description>The amount the client is eligible for concessions based on their subscription amount</description>
    <inlineHelpText>The amount the client is eligible for concessions based on their subscription amount</inlineHelpText>
    <label>Concession Eligible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>