force-app/main/default/objects/Case/fields/Concession_Products_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Concession_Products_Quantities__c</fullName>
    <description>The products and quantities that were selected for a concession request</description>
    <label>Concession Products &amp; Quantities</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>