force-app/main/default/objects/Case/fields/Concession_Selected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Concession_Selected_Amount__c</fullName>
    <description>The amount selected for concessions for the Account</description>
    <inlineHelpText>The amount selected for concessions for the Account</inlineHelpText>
    <label>Concession Selected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>