force-app/main/default/objects/Case/fields/Concession_Status__c.field-meta.xml
<CustomField>
    <fullName>Concession_Status__c</fullName>
    <description>The status of the concession request</description>
    <label>Concession Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Auto-Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>