force-app/main/default/objects/Case/fields/Do_Not_Assign_Using_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Assign_Using_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox used during the case creation flow to prevent the case from getting reassigned using assignment rules</description>
    <label>Do Not Assign Using Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>