force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email address of the user submitting the case.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>