force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>The Type of Case Issue</description>
    <inlineHelpText>Type of Case Issue</inlineHelpText>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Help</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Email Not Received</fullName>
            </value>
            <value>
                <fullName>Finicity</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>New User / Client</fullName>
            </value>
            <value>
                <fullName>Plaid</fullName>
            </value>
            <value>
                <fullName>VTO Unlock</fullName>
            </value>
            <value>
                <fullName>Specific Request</fullName>
            </value>
            <value>
                <fullName>Chargeback / Payment Disputes</fullName>
            </value>
            <value>
                <fullName>Negative Review</fullName>
            </value>
            <value>
                <fullName>Standard Client Success Case</fullName>
            </value>
            <value>
                <fullName>Client Success Cancellation Case</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
                <isActive>false</isActive>
                <label>Dev</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
                <isActive>false</isActive>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>Tech</fullName>
                <isActive>false</isActive>
                <label>Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>