force-app/main/default/objects/Case/fields/Maximum_Eligible_Renewal_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Eligible_Renewal_Discount__c</fullName>
    <description>The maximum potential discount available to extend to a client for their renewal</description>
    <formula>Account.Maximum_Eligible_Renewal_Discount__c</formula>
    <inlineHelpText>The maximum potential discount available to extend to a client for their renewal</inlineHelpText>
    <label>Maximum Eligible Renewal Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>