force-app/main/default/objects/Case/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the user submitting the case.</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>