force-app/main/default/objects/Case/fields/of_Calls__c.field-meta.xml
<CustomField>
    <fullName>of_Calls__c</fullName>
    <description># of Contact Calls made from the case.</description>
    <label># of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>