force-app/main/default/objects/Case/fields/of_Calls_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>of_Calls_Reviewed__c</fullName>
    <description>Indicates how many calls were reviewed by the QA team for this case</description>
    <inlineHelpText>Indicates how many calls were reviewed by the QA team for this case</inlineHelpText>
    <label># of Calls Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>