force-app/main/default/objects/Case/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The phone number of the user submitting the case.</description>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>