force-app/main/default/objects/Case/fields/Process_Override__c.field-meta.xml
<CustomField>
    <fullName>Process_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle field used to bypass automation as required.</description>
    <label>Process_Override</label>
    <type>Checkbox</type>
</CustomField>