force-app/main/default/objects/Case/fields/Reassignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Type__c</fullName>
    <description>The type of reassignment requested</description>
    <label>Reassignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote Tax Advisor</fullName>
            </value>
            <value>
                <fullName>Tax Preparer</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Payroll Specialist</fullName>
            </value>
            <value>
                <fullName>RTA</fullName>
                <isActive>false</isActive>
                <label>RTA</label>
            </value>
            <value>
                <fullName>VIP</fullName>
                <isActive>false</isActive>
                <label>VIP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>