force-app/main/default/objects/Case/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>Primarily set by QA Team after a QA case review.</description>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coach Agent</fullName>
            </value>
            <value>
                <fullName>Contact Client &amp; Coach Agent</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>