force-app/main/default/objects/Case/fields/Resolved_Status_Set__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Status_Set__c</fullName>
    <description>Date the Case Status was set to Resolved / Closed</description>
    <inlineHelpText>Date the Case Status was set to Resolved / Closed</inlineHelpText>
    <label>Resolved Status Set</label>
    <type>Date</type>
</CustomField>