force-app/main/default/objects/Case/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <description>Round Robin ID to route cases. The CASE formula supports different integer processes for each record type</description>
    <formula>CASE( RecordType.Name ,
&quot;Billing&quot;, MOD(VALUE( CaseNumber ) ,6) +1,
&quot;Support&quot;, MOD(VALUE( CaseNumber ) ,5) +1,
&quot;Subscription Review&quot;, MOD(VALUE( CaseNumber ) ,6) +1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>