force-app/main/default/objects/Case/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>IF(
 RecordType.Name = &apos;Quality Assurance&apos;,

Sales_Rep2__r.Manager.FirstName +&quot; &quot;+Sales_Rep2__r.Manager.LastName, Account.Sales_Manager__r.FirstName + &quot; &quot; +  Account.Sales_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>