force-app/main/default/objects/Case/fields/Secondary_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Cancellation_Reason__c</fullName>
    <label>Secondary Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Cancellation_Reason__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Reviews</fullName>
            </value>
            <value>
                <fullName>Buyer’s Remorse</fullName>
            </value>
            <value>
                <fullName>Closing/Closed Business</fullName>
            </value>
            <value>
                <fullName>Communication/Timeliness</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Face to Face Interaction</fullName>
            </value>
            <value>
                <fullName>Issues with Service(s) Performed</fullName>
            </value>
            <value>
                <fullName>Lack of Service Thus Far</fullName>
            </value>
            <value>
                <fullName>Little to no business activity</fullName>
                <label>Little to no Business Activity</label>
            </value>
            <value>
                <fullName>Misleading Information</fullName>
            </value>
            <value>
                <fullName>Missed/Rescheduled Appointments</fullName>
            </value>
            <value>
                <fullName>Multiple Reassignments</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Other - Please Describe in Notes</fullName>
            </value>
            <value>
                <fullName>Oversold</fullName>
            </value>
            <value>
                <fullName>Prevention Alert</fullName>
            </value>
            <value>
                <fullName>Technical Issues (Portal, VTO, etc)</fullName>
            </value>
            <value>
                <fullName>Unable to Determine</fullName>
            </value>
            <value>
                <fullName>Undersold</fullName>
            </value>
            <value>
                <fullName>Using another provider or DIY</fullName>
                <label>Using Another Provider or DIY</label>
            </value>
            <value>
                <fullName>VTO Purchase Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>