force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Additional case hierarchy details dependent on the Type field value</description>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Updates</fullName>
            </value>
            <value>
                <fullName>Additional User</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Appointments</fullName>
            </value>
            <value>
                <fullName>Assignment Adjustment</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Bank Sync</fullName>
            </value>
            <value>
                <fullName>Billing Inquiry</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Cancel Request</fullName>
            </value>
            <value>
                <fullName>Changes to Portal Information</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Client Issue</fullName>
            </value>
            <value>
                <fullName>Client-Related</fullName>
            </value>
            <value>
                <fullName>Communication / Timeliness</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Connection Issue</fullName>
            </value>
            <value>
                <fullName>Custom Quote / Quote Modification</fullName>
            </value>
            <value>
                <fullName>Discount Request</fullName>
            </value>
            <value>
                <fullName>Dissolution</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate Transactions</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>Employee Updates</fullName>
            </value>
            <value>
                <fullName>Entity Formation</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Fulfillment-Related</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Improper Monetary Expectations</fullName>
            </value>
            <value>
                <fullName>Improper Service Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>