force-app/main/default/objects/Case/fields/Sub_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Category__c</fullName>
    <description>Additional level of detail depending on the Sub-Type of the case.</description>
    <inlineHelpText>Additional level of detail depending on the Sub-Type of the case.</inlineHelpText>
    <label>Sub-Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Notices</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Reassignment</fullName>
            </value>
            <value>
                <fullName>Appointment Error</fullName>
            </value>
            <value>
                <fullName>Live Support - Inbound</fullName>
            </value>
            <value>
                <fullName>Live Support - Outbound</fullName>
            </value>
            <value>
                <fullName>Missed Appointment</fullName>
            </value>
            <value>
                <fullName>New Appointment</fullName>
            </value>
            <value>
                <fullName>Reschedule Appointment</fullName>
            </value>
            <value>
                <fullName>Survey Response</fullName>
            </value>
            <value>
                <fullName>Prevention Alert</fullName>
            </value>
            <value>
                <fullName>Pre-Arbitration</fullName>
            </value>
            <value>
                <fullName>Retrieval Request</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Bank Sync</fullName>
            </value>
            <value>
                <fullName>CSV Upload</fullName>
            </value>
            <value>
                <fullName>Duplicate Transactions</fullName>
            </value>
            <value>
                <fullName>Missing Transactions</fullName>
            </value>
            <value>
                <fullName>1099</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Messages</fullName>
            </value>
            <value>
                <fullName>Mileage Tracker</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>VTO</fullName>
            </value>
            <value>
                <fullName>Feature Walkthrough</fullName>
            </value>
            <value>
                <fullName>Site Walkthrough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>