force-app/main/default/objects/Case/fields/Subscription_Engagement_Rep__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Engagement_Rep__c</fullName>
    <description>Subscription Engagement Rep</description>
    <label>Subscription Engagement Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brittany Lewis</fullName>
            </value>
            <value>
                <fullName>Cedric Ellison</fullName>
            </value>
            <value>
                <fullName>David Lobel</fullName>
            </value>
            <value>
                <fullName>Hayley Lambert</fullName>
            </value>
            <value>
                <fullName>Kayla Boles</fullName>
            </value>
            <value>
                <fullName>Nathan Slunder</fullName>
            </value>
            <value>
                <fullName>Tyler Berghold</fullName>
            </value>
            <value>
                <fullName>Brian Gains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>