force-app/main/default/objects/Case/fields/Subscription_Lines_for_Concession__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Lines_for_Concession__c</fullName>
    <description>The subscription lines selected for concession</description>
    <label>Subscription Lines for Concession</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Back Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Back Personal Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Dedicated Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Personal Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>